Fix search bar spacing

--- a/styles/_uswds-theme-custom-styles.scss
+++ b/styles/_uswds-theme-custom-styles.scss
@@ -207,10 +207,10 @@ HOME
 }
 
 // ## DOMAIN SEARCH ---------------------------------------
-.domain-search-input {
-  max-width: 60%;
+.availability-button {
+  border-radius: 4px;
+  padding-left: units(8);
 }
-
 
 // ## HIGHLIGHTS ------------------------------------------
 .highlight__benefits {
